--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Clickrabbit</title>
+  <title>Omnifood Home - Clickrabbit</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200" />
+  <meta  content="FoodStore Angular application"  >
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
